[fix] (ABC-1082): Fix layout vertical alignment and max height

--- a/src/modules/base/layout/layout.css
+++ b/src/modules/base/layout/layout.css
@@ -1,9 +1,11 @@
-
-
 :host,
-.avonni-layout-wrapper {
+.avonni-layout-wrapper,
+.avonni-layout__slot {
     height: 100%;
+    max-height: inherit;
+    min-height: inherit;
 }
+
 .avonni-layout-wrapper {
     row-gap: var(--avonni-layout-items-spacing-block-between, 0);
     column-gap: var(--avonni-layout-items-spacing-inline-between, 0);
